--- a/package.json
+++ b/package.json
@@ -1,5 +1,17 @@
 {
   "dependencies": {
+    "@hotwired/stimulus": "^3.1.0",
+    "@hotwired/turbo-rails": "^7.1.3",
+    "@popperjs/core": "^2.11.5",
+    "bootstrap": "^5.2.0",
+    "bootstrap-icons": "^1.9.1",
+    "esbuild": "^0.14.51",
+    "sass": "^1.54.0",
     "tom-select": "2.1.0"
+  },
+  "packageManager": "yarn@3.2.2",
+  "scripts": {
+    "build:css": "sass --style compressed ./app/assets/stylesheets/application.bootstrap.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules",
+    "build": "esbuild app/javascript/*.* --bundle --minify --outdir=app/assets/builds --public-path=assets"
   }
 }
