nodemodules excluding fix

--- a/.gitignore
+++ b/.gitignore
@@ -34,7 +34,7 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 /.yarnrc.yml
-/node_modules/
+/node_modules
 /.yarn/
 
 /app/assets/builds/*
