--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -15,3 +15,9 @@ Rails/I18nLocaleTexts:
 Lint/MissingSuper:
   Exclude:
     - 'app/services/**/*'
+
+Metrics/MethodLength:
+  Max: 20
+
+Metrics/AbcSize:
+  Max: 20
