--- a/.gitignore
+++ b/.gitignore
@@ -33,10 +33,21 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
-/.yarnrc.yml
-/node_modules
-/.yarn/
 
+# Ignore node modules packs folder
+/node_modules
+
+# Ignore assets
 /app/assets/builds/*
 !/app/assets/builds/.keep
+
+# Ignore redis backups
 /*.rdb
+
+# Ignore yarn files
+.yarn/*
+!.yarn/patches
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
